# simple_generators

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
adapter/: Cargo.toml
adapter/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: lib.rs
