[package]
name = "simple_generators"
version = "0.2.0"
authors = ["Vova <vova616@gmail.com>"]
edition = "2021"
description = "making work with generators simpler"
license = "MIT"

[dependencies]
adapter = { package = "simple_generators_adapter", path = "adapter", version = "0.2.0" }
macros = { package = "simple_generators_macros", path = "macros", version = "0.2.0" }
