[package]
name = "simple_generators_macros"
version = "0.2.0"
authors = ["Vova <vova616@gmail.com>"]
edition = "2021"
description = "helper crate for simple_generators, containing the macro"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.43"
simple_generators_adapter = { path = "../adapter", version = "0.2.0" }
